# ctfhub

./: .dockerignore  .env.example  .env.nginx-proxy.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  docker-compose-proxy.yml  docker-compose.yml  docker-entrypoint.sh  install-heroku.sh  manage.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: discord-notify.yml  format.yml  notify.yml  test.yml
conf/certs/: README.md
conf/nginx/: nginx.conf
ctfhub/: __init__.py  apps.py  context_processors.py  exceptions.py  forms.py  helpers.py  mixins.py  models.py  signals.py  urls.py  validators.py
ctfhub/decorators/: user.py
ctfhub/migrations/: 0001_initial.py  0002_auto_20210102_1139.py  0003_auto_20210113_1945.py  0004_ctf_note_id.py  0005_auto_20210204_1921.py  0006_auto_20210329_1218.py  0007_ctf_rating.py  0008_remove_challenge_whiteboard_id_and_more.py  0009_add_challenge_assigned_members.py  0009_alter_member_user.py  0009_challenge_working_on_it_alter_challengefile_file_and_more.py  0010_alter_challengefile_file_and_more.py  0010_remove_challenge_working_on_it_and_more.py  0010_remove_ctf_visibility.py  0011_ctf_visibility.py  0012_alter_member_status.py  0013_alter_member_country.py  0014_alter_member_timezone.py  0015_alter_ctf_note_id_alter_member_timezone.py  0016_alter_member_timezone.py  0017_alter_member_timezone.py  0017_merge_20230629_1617.py  0018_alter_member_status.py  0019_alter_challenge_note_id_alter_ctf_note_id.py  0020_alter_member_hedgedoc_password.py  0021_alter_team_avatar.py
ctfhub/templatetags/: ctfhub_filters.py
ctfhub/tests/: test_forms.py  test_helpers.py  test_models.py  test_urls.py  test_views.py  utils.py
ctfhub/views/: __init__.py  categories.py  challenges.py  ctfs.py  files.py  tags.py  teams.py  users.py
ctfhub_project/: asgi.py  settings.py  urls.py  wsgi.py
ctfpad/: __init__.py  apps.py  context_processors.py  decorators.py  forms.py  helpers.py  middleware.py  mixins.py  models.py  signals.py  urls.py  validators.py
ctfpad/decorators/: user.py
ctftools/: asgi.py  settings.py  urls.py  wsgi.py
docs/: build.md  gallery.md  ssl-setup.md
(+142 files in other folders)
